# xeo

./: Cargo.toml  README.md  epic.txt  example.xeo  example2.xeo  install.bat  install.sh  test.xeo  uninstall.bat  uninstall.sh  xeo-arm64  xeo-linux  xeo-macos
.cargo/: config.toml
.github/workflows/: rust.yml
src/: main.rs
