[package]
name = "xeo"
version = "4.0.0"
edition = "2024"

[dependencies]

[profile.release]
opt-level = "z"     # Optimize for size ('s' or 'z')
debug = false
lto = "fat"          # Enable Link Time Optimization (fat LTO for best size)
codegen-units = 1   # Reduce parallel code generation for better optimization
panic = "abort"     # Remove stack unwinding code (saves ~10% size)
overflow-checks = false
incremental = false
strip = true        # Automatically strip symbols (same as running `strip` command)